--- a/client/src/style/main.css
+++ b/client/src/style/main.css
@@ -646,8 +646,17 @@ form .submit-container {
 }
 .media-hero .sub-infos-container {
   display: flex;
-  justify-content: space-between;
-  align-items: center;
+  align-items: flex-start;
+  flex-direction: column;
+  gap: 1rem;
+}
+@media (min-width: 1200px) {
+  .media-hero .sub-infos-container {
+    align-items: center;
+    flex-direction: row;
+    gap: 0;
+    justify-content: space-between;
+  }
 }
 .media-hero .sub-infos-container .rate-container {
   display: flex;
@@ -673,10 +682,16 @@ form .submit-container {
   width: 2px;
   height: 2px;
   background-color: #A9B4C6;
+  display: none;
+}
+@media (min-width: 1200px) {
+  .media-hero .sub-infos-container .dot-separator {
+    display: block;
+  }
 }
 .media-hero .sub-infos-container p {
   color: #A9B4C6;
-  font-size: 0.75rem;
+  font-size: 0.88rem;
   font-family: "Inter-Regular";
 }
 .media-hero .interact-container .rate .icon {
